block-2 is complete, but will need to do padding

--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
 <body>
 	<div class="block-2">
 		<div class="wrapper">
+			<h1>Зачем вам это нужно?</h1>
 			<div class="list-col2 left">
 				<h1>Стандартные загрязнения</h1>
 
@@ -19,22 +20,44 @@
 						создают эффект старости</p>
 				</div>
 
-			<div class="row">
-					<div class="img"><img src="img/icon-2-1.png" alt=""></div>
-					<p>Некрасивый внешний вид, пятна и засаленности 
-						создают эффект старостиНекрасивый внешний вид, пятна и засаленности 
-						создают эффект старостиНекрасивый внешний вид, пятна и засаленности 
-						создают эффект старостиНекрасивый внешний вид, пятна и засаленности 
-						создают эффект старостиНекрасивый внешний вид, пятна и засаленности 
-						создают эффект старости</p>
+				<div class="row">
+					<div class="img"><img src="img/icon-2-2.png" alt=""></div>
+					<p>Пылевые клещи и пр. бактерии, а так же продукты 
+							их жизнедеятельности несут в себе опасность для 
+							Вашего здоровья и здоровья Ваших детей, а так же 
+							домашних животных</p>
 				</div>
 
-		<div class="row">
-					<div class="img"><img src="img/icon-2-1.png" alt=""></div>
-					<p>Некрасивый внешний вид, пятна и засаленности 
-						создают эффект старости</p>
+				<div class="row">
+					<div class="img"><img src="img/icon-2-3.png" alt=""></div>
+					<p>Неприятный запах</p>
 				</div>
 
+			</div>
+
+			<div class="list-col2 right">
+				<h1>После химчистки</h1>
+
+				<div class="row">
+					<div class="img"><img src="img/icon-2-4.png" alt=""></div>
+					<p>Имеет приятный внешний вид, до 95% всех пятен 
+						удалено, произведена глубинная очистка всего 
+						текстиля (до 25мм)</p>
+				</div>
+
+				<div class="row">
+					<div class="img"><img src="img/icon-2-5.png" alt=""></div>
+					<p>Проведена антибактериальная обработка, диван 
+						стал абсолютно безопасным для Вас и Ваших детей, 
+						а так же домашних животных</p>
+				</div>
+
+				<div class="row">
+					<div class="img"><img src="img/icon-2-6.png" alt=""></div>
+					<p>Имеет приятный свежий аромат  </p>
+				</div>
+
+			</div>
 		</div>
 	</div>
 
