--- a/www/index.html
+++ b/www/index.html
@@ -2,16 +2,73 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>AcuaClean</title>
+	<title>AquaClean</title>
 	<link rel="stylesheet" href="css/style.css">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:600,400&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 </head>
 <body>
+	<nav class="top">
+		<ul>
+			<li class="active">Что дает химчистка</li>
+			<li>Почему не чистить самому</li>
+			<li>Результаты нашей работы</li>
+			<li>Как мы чистим</li>
+			<li>Гарантии результата</li>
+			<li>Отзывы</li>
+			<li>Вопросы</li>
+			<li>Цены</li>
+			<li>Контакты</li>
+		</ul>
+	</nav>
+	<header>
+		<div class="wrapper">
+			<div class="logo">
+				<a href="#">
+					<img src="img/logo.png" alt="">
+					<section>
+						<h1>AquaClean</h1>
+						<h2>Чистота с доставкой на дом</h2>
+					</section>
+				</a>
+			</div>
+			<address>
+				<ul>
+					<li>(099) <span>324 01 61</span></li>
+					<li>(067) <span>959 21 21</span></li>
+				</ul>
+			</address>
+			<button>Заказать</button>
+		</div>
+	</header>
+	<div class="block-1">
+		<div class="wrapper">
+			<section>
+				<h1>Профессиональная химчистка ковров и мягкой мебели</h1>
+				<h2>в Павлограде</h2>
+			</section>
+			<div>
+				<ul>
+					<li>Бесплатный выезд<br>на дом</li>
+					<li>Гарантированный<br>результат</li>
+					<li>Работаем по<br>ГОСТ Р 51108-97</li>
+				</ul>
+			</div>
+			<div>
+				<span>До</span>
+				<span>После</span>
+			</div>
+			<div class="sofa">
+				<div><img src="img/sofa-clean.png" alt=""></div>
+				<div><img src="img/arrow.png" alt=""></div>
+			</div>
+		</div>
+	</div>
 	<div class="block-2">
 		<div class="wrapper">
 			<h1>Зачем вам это нужно?</h1>
-			<div class="list-col2 left">
+			<section class="list-col2 left">
 				<h1>Стандартные загрязнения</h1>
 
 				<div class="row">
@@ -33,9 +90,9 @@
 					<p>Неприятный запах</p>
 				</div>
 
-			</div>
+			</section>
 
-			<div class="list-col2 right">
+			<section class="list-col2 right">
 				<h1>После химчистки</h1>
 
 				<div class="row">
@@ -57,9 +114,58 @@
 					<p>Имеет приятный свежий аромат  </p>
 				</div>
 
+			</section>
+		</div>
+	</div>
+	
+	<div class="block-4">
+		<div class="wrapper">
+			<h1>Чистить самому — невыгодно!</h1>
+			<h2>Для того чтобы выполнить химчистку дивана или коврового покрытия, Вам потребуется:</h2>
+			<div class="fix">
+				<section>
+					<div class="img"><img src="img/icon-4-1.png" alt=""></div>
+					<h1>Дорогостоящая химия:</h1>
+					<ul>
+						<li>Пылесос сухой уборки</li>
+						<li>Моющий пылесос</li>
+						<li>Парогенератор</li>
+						<li>
+							Ковромоечная машина <br>
+							(в случае очистки ковров)
+						</li>
+					</ul>
+				</section>
+				<section>
+					<div class="img"><img src="img/icon-4-2.png" alt=""></div>
+					<h1>Получить и потратить:</h1>
+					<ul>
+						<li>Немного знаний</li>
+						<li>
+							2-3 часа Вашего времени <br>
+							и упорного труда
+						</li>
+					</ul>
+				</section>
+			</div>
+			<div class="fix">
+				<section>
+					<div class="img"><img src="img/icon-4-3.png" alt=""></div>
+					<h1>Оборудование:</h1>
+					<ul>
+						<li>Karcher</li>
+						<li>Chemspec</li>
+						<li>Amway</li>
+					</ul>
+				</section>
+				<section>
+					<div class="img"><img src="img/icon-4-4.png" alt=""></div>
+					<p>Советуем подумать о</p>
+					<p>целесообразности</p>
+					<p>вызова специалиста</p>
+				</section>
 			</div>
 		</div>
 	</div>
-
 </body>
 </html>
