--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,8 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:600,400&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
+	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	<script src="js/script.js"></script>
 </head>
 <body>
 	<nav class="top">
@@ -167,5 +169,13 @@
 			</div>
 		</div>
 	</div>
+	  <div class="shadow">
+      <form action="send.php" method="post">
+          <input type="text" name="name" placeholder="Введите имя">
+          <input type="text" name="phone" placeholder="Введите номер">
+          <input type="submit" value="Заказать">
+          <div class="cancel"></div>
+      </form>
+  </div>
 </body>
 </html>
