Why you so serious?

--- a/www/index.html
+++ b/www/index.html
@@ -13,15 +13,15 @@
 <body>
 	<nav class="top">
 		<ul>
-			<li class="active">Что дает химчистка</li>
-			<li>Почему не чистить самому</li>
-			<li>Результаты нашей работы</li>
-			<li>Как мы чистим</li>
-			<li>Гарантии результата</li>
-			<li>Отзывы</li>
-			<li>Вопросы</li>
-			<li>Цены</li>
-			<li>Контакты</li>
+			<li class="active"><a href="#">Что дает химчистка</a></li>
+			<li><a href="#">Почему не чистить самому</a></li>
+			<li><a href="#">Результаты нашей работы</a></li>
+			<li><a href="#">Как мы чистим</a></li>
+			<li><a href="#">Гарантии результата</a></li>
+			<li><a href="#">Отзывы</a></li>
+			<li><a href="#">Вопросы</a></li>
+			<li><a href="#">Цены</a></li>
+			<li><a href="#">Контакты</a></li>
 		</ul>
 	</nav>
 	<header>
@@ -120,6 +120,41 @@
 		</div>
 	</div>
 	
+	<div class="block-3">
+		<div class="wrapper">
+			<h1>Целесообразность услуги на примере не большого дивана</h1>
+			<div>
+				<h2>Покупка (от 3000 грн)</h2>
+				<ul class="plus">
+					<li >Новая мебель - есть новая мебель, со всеми преимуществами, но стоит ли покупать новую мебель всякий раз, когда она запачкалась?</li>
+				</ul>
+			</div>
+			<div>
+				<h2>Перетяжка (от 1500 грн)</h2>
+				<ul class="plus">
+					<li>Вы получаете абсолютно новую обивку Вашему любимому дивану. Это оправдано, когда обивка повреждена физически (надрывы, прожоги)</li>
+				</ul>
+				<ul class="minus">
+					<li>Необходимо доставить мебель в рабочий цех компании, а затем забрать. </li>
+					<li>Срок работы в данном случае составляет от 5ти дней, поэтому надо позаботиться на чем спать.</li>
+					<li>Отсутствие антибактериальной обработки.</li>
+				</ul>
+			</div>
+			<div>
+				<h2>Химчистка (от 300 грн)</h2>
+				<ul class="plus">
+					<li>Вы экономите свое время, не нужно ничего никуда везти. Мы приедем к Вам и произведем все работы на месте в течении 1-3 часов.</li>
+					<li>Использовать мебель можно уже через 24 часов после осуществления очистки.</li>
+					<li>Полная дезинфекция и устранение неприятных запахов.</li>
+					<li>Экономия денег на замене обивки минимум в 5 раз, на покупке новой мебели минимум в 10 раз.</li>
+				</ul>
+				<ul class="minus">
+					<li>С помощью химчистки невозможно восстановить механические повреждения обивки.</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
 	<div class="block-4">
 		<div class="wrapper">
 			<h1>Чистить самому — невыгодно!</h1>
@@ -169,13 +204,76 @@
 			</div>
 		</div>
 	</div>
-	  <div class="shadow">
-      <form action="send.php" method="post">
-          <input type="text" name="name" placeholder="Введите имя">
-          <input type="text" name="phone" placeholder="Введите номер">
-          <input type="submit" value="Заказать">
-          <div class="cancel"></div>
-      </form>
-  </div>
+
+	<div class="block-6">
+		<h1>Мы используем только экологически чистую,<br> 
+		сертифицированную биохимию</h1>
+		<p>Во время работы мы используем исключительно  антибактериальную, гипоаллергенную биохимию <br>
+		профессионального назначения для химчистки мебели и ковров, согласно ГОСТ Р 51108-97.</p>
+		<p>Так что Вы можете быть полностью уверены, что после химчистки Ваша мебель и ковровые покрытия <br> 
+		будут не только идеально чистыми, но еще и абсолютно безопасным <br>
+		для здоровья Вас, Ваших детей и домашних животных.</p>
+	</div>
+
+	<div class="block-7">
+		<div class="wrapper">
+			<h1>Зачем вам это нужно?</h1>
+			<section class="list-col2 left">
+
+				<div class="row">
+					<div class="img"><img src="img/icon-7-1.png" alt=""></div>
+					<p>Гибкий график<br>
+						<span>Приезжаем в любое удобное для Вас время</span>
+					</p>
+				</div>
+
+				<div class="row">
+					<div class="img"><img src="img/icon-7-2.png" alt=""></div>
+					<p>Гарантия результата 100% <br>
+					<span>В случае не достижение результата, возврат <br>
+						денег в полном объеме</span></p>
+				</div>
+
+				<div class="row">
+					<div class="img"><img src="img/icon-7-3.png" alt=""></div>
+					<p>Приятные цены и гибкая система <br>
+						скидок</p>
+				</div>
+
+			</section>
+
+			<section class="list-col2 right">
+
+				<div class="row">
+					<div class="img"><img src="img/icon-7-4.png" alt=""></div>
+					<p>Используем только профессиональную<br>
+					сертифицированную химию и<br>
+					оборудования</p>
+				</div>
+
+				<div class="row">
+					<div class="img"><img src="img/icon-7-5.png" alt=""></div>
+					<p>Более 2х лет успешной работы</p>
+				</div>
+
+				<div class="row">
+					<div class="img"><img src="img/icon-7-6.png" alt=""></div>
+					<p>Более 100 довольных клиентов в<br>
+						Павлограде и Днепропетровской<br>
+						области
+					</p>
+				</div>
+
+			</section>
+		</div>
+	</div>
+	<div class="shadow">
+		<form action="send.php" method="post">
+			<input type="text" name="name" placeholder="Введите имя">
+			<input type="text" name="phone" placeholder="Введите номер">
+			<input type="submit" value="Заказать">
+			<div class="cancel"></div>
+		</form>
+	</div>
 </body>
 </html>
