slider block-1 complete

--- a/www/index.html
+++ b/www/index.html
@@ -62,6 +62,7 @@
 				<span>После</span>
 			</div>
 			<div class="sofa">
+				<div><img src="img/sofa-dirt.png" alt=""></div>
 				<div><img src="img/sofa-clean.png" alt=""></div>
 				<div><img src="img/arrow.png" alt=""></div>
 			</div>
@@ -217,7 +218,7 @@
 
 	<div class="block-7">
 		<div class="wrapper">
-			<h1>Зачем вам это нужно?</h1>
+			<h1>Преимущества и гарантии</h1>
 			<section class="list-col2 left">
 
 				<div class="row">
