update something style

--- a/www/index.html
+++ b/www/index.html
@@ -163,7 +163,7 @@
 			<div class="fix">
 				<section>
 					<div class="img"><img src="img/icon-4-1.png" alt=""></div>
-					<h1>Дорогостоящая химия:</h1>
+					<h1>Оборудование:</h1>
 					<ul>
 						<li>Пылесос сухой уборки</li>
 						<li>Моющий пылесос</li>
@@ -189,7 +189,7 @@
 			<div class="fix">
 				<section>
 					<div class="img"><img src="img/icon-4-3.png" alt=""></div>
-					<h1>Оборудование:</h1>
+					<h1>Дорогостоящая химия:</h1>
 					<ul>
 						<li>Karcher</li>
 						<li>Chemspec</li>
@@ -268,6 +268,58 @@
 			</section>
 		</div>
 	</div>
+
+	<div class="block-8">
+		<div class="wrapper">
+			<h1>Отзывы реальных людей</h1>
+			<article>
+				<img src="img/block-8-1.png" alt="">
+				<p>Елена Завалина</p>
+				<p>Ребята, лучшего сервиса, в нашем городе, Вы не найдете!!! <br>
+					1. Порадовали быстрой реакцией на наш заказ! Приехали в Нам удобное время в Наш выходной! <br>
+					2. Обслуживание: очень вежливый молодой человек добросовестно и старательно выполнил свою работу! <br>
+					3. За 1,5 часа салон авто был стерильно чист! Ни запаха, ни грязи, ни пятен! Волшебно! <br>
+					4. Приятно удивили цены! <br>
+					Пожалуй, никакие конкуренты - НЕ конкуренты Химчистке "AquaClean" в Павлограде!!! <br>
+				</p>
+			</article>
+			<article>
+				<img src="img/block-8-2.png" alt="">
+				<p>Надежда Осокина</p>
+				<p>Заказывали химчистку коврового покрытия и мягкой мебели(диван и 2 кресла).Заказ был выполнен на следующий день после звонка в удобное для нас время.Очень порадовало качество работы,компетентность исполнителя(молодой человек по имени Андрей),ПРИЯТНАЯ ЦЕНА!! При первой необходимости будем обращаться только к вам и рекомендовать всем знакомым! Процветания вам,постоянных клиентов и удачи в Новом году.Еще раз спасибо)</p>
+			</article>
+		</div>
+	</div>
+	<div class="block-9">
+		<div class="wrapper">
+			<h1>Часто задаваемые вопросы</h1>
+			<article>
+				<p>Точно ли отстираются все пятна и запахи?</p>
+				<p>Мы даем гарантию на то, что приложим все усилия для очистки Вашего ковра от загрязнений любого рода. И при этом касательно конкретного загрязнения мы ничего не можем сказать, не зная его истории: как давно и каким образом пятно появилось, что уже делалось для его устранения и т.д. Не утруждайте себя поиском оптимального варианта выведения пятен. Их настолько много - клейкие, химические, растительные, животные – Вы можете положиться на наш опыт по пятновыведению – (удаляются до 95% пятен), и Ваш диван (ковер) будет очищен от столь надоевших и портящих настроение пятен с удивительной быстротой.</p>
+			</article>
+			<article>
+				<p>Безопасна ли такая химчистка для здоровья? Какие средства Вы используете?</p>
+				<p>Здоровье Вашей семьи и домашних любимцев находится в полной БЕЗОПАСНОСТИ, так как для чистки используется профессиональная химия мировых производителей (Karcher, Amway, Chemspech), гарантирующих безопасность Вашего здоровья при использовании в жилых помещениях! Ваши родные смогут дышать чистым воздухом и забудут о пылевых клещах и аллергии надолго, а Вы сможете проявить любовь и заботу о здоровье своей семьи!</p>
+			</article>
+			<article>
+				<p>Каким оборудованием производится химчистка?</p>
+				<p>При работе используется только профессиональное немецкое оборудование, которое способно выполнять глубокую очистку - ковров до основания, а мебельной обивки на глубину до 2 см!</p>
+			</article>
+			<article>
+				<p>Где осуществляется химчистка? Можно ли привезти к вам?</p>
+				<p>Мягкая мебель чиститься исключительно на дому, а ковровые покрытия Вы можете привести по адресу ул.Днепровская 405 или вызвать специалиста на дом, доставка по городу АБСОЛЮТНО БЕСПЛАТНО (Ограничения по метражу 10м²) – Уточняйте с менеджером по телефону!</p>
+			</article>
+			<article>
+				<p>Завтра ко мне приезжают гости (заезжают арендаторы) - успеет ли мебель высохнуть?</p>
+				<p>Уже на следующий день Вы сможете принимать гостей у себя, наслаждаясь общением с ними на чистом диване, потому что после чистки высыхание происходит в течение 12-24 часов!</p>
+			</article>
+			<article>
+				<p>Какие гарантии на работу Вы даете?</p>
+				<p>Мы работаем согласно ГОСТу Р 51108-97, в случае недостижения результатов мы вернем Вам деньги в полном объеме. Так что риск исключен полностью! <span>Все возникшие вопросы вы можете уточнить с менеджеров по телефону 066 48 47 018 (Оставить заявку)</span></p>
+			</article>
+		</div>
+	</div>
+
 	<div class="shadow">
 		<form action="send.php" method="post">
 			<input type="text" name="name" placeholder="Введите имя">
