--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>AquaClean</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="shortcut icon" href="img/favicon.ico">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:600,400&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
