--- a/www/index.html
+++ b/www/index.html
@@ -42,7 +42,7 @@
 					<li>(067) <span>959 21 21</span></li>
 				</ul>
 			</address>
-			<button>Заказать</button>
+			<button class="button green">Заказать</button>
 		</div>
 	</header>
 	<div class="block-1">
@@ -274,7 +274,7 @@
 		<div class="wrapper">
 			<h1>Отзывы реальных людей</h1>
 			<article>
-				<img src="img/block-8-1.png" alt="">
+				<img src="img/icon-8-1.png" alt="">
 				<p>Елена Завалина</p>
 				<p>Ребята, лучшего сервиса, в нашем городе, Вы не найдете!!! <br>
 					1. Порадовали быстрой реакцией на наш заказ! Приехали в Нам удобное время в Наш выходной! <br>
@@ -285,7 +285,7 @@
 				</p>
 			</article>
 			<article>
-				<img src="img/block-8-2.png" alt="">
+				<img src="img/icon-8-2.png" alt="">
 				<p>Надежда Осокина</p>
 				<p>Заказывали химчистку коврового покрытия и мягкой мебели(диван и 2 кресла).Заказ был выполнен на следующий день после звонка в удобное для нас время.Очень порадовало качество работы,компетентность исполнителя(молодой человек по имени Андрей),ПРИЯТНАЯ ЦЕНА!! При первой необходимости будем обращаться только к вам и рекомендовать всем знакомым! Процветания вам,постоянных клиентов и удачи в Новом году.Еще раз спасибо)</p>
 			</article>
@@ -316,9 +316,24 @@
 			</article>
 			<article>
 				<p>Какие гарантии на работу Вы даете?</p>
-				<p>Мы работаем согласно ГОСТу Р 51108-97, в случае недостижения результатов мы вернем Вам деньги в полном объеме. Так что риск исключен полностью! <span>Все возникшие вопросы вы можете уточнить с менеджеров по телефону 066 48 47 018 (Оставить заявку)</span></p>
+				<p>Мы работаем согласно ГОСТу Р 51108-97, в случае недостижения результатов мы вернем Вам деньги в полном объеме. Так что риск исключен полностью!</p>
 			</article>
 		</div>
+	</div>
+	<div class="block-call">
+		<div class="wrapper">
+			<div>
+				<p>Все возникшие вопросы вы можете уточнить<br>
+					у нашего менеджера по телефонам </p>
+					<div class="phones">
+						<span><span>(099)</span> 324 01 61</span>
+						<span><span>(067)</span> 959 21 21</span>
+					</div>
+				</div>
+				<div>
+					<button class="button blue">оставить заявку</button>
+				</div>
+			</div>
 	</div>
 
 	<div class="shadow">
