--- a/AquaClean/index.html
+++ b/AquaClean/index.html
@@ -208,14 +208,22 @@
 	</div>
 
 	<div class="block-6">
-		<h1>Мы используем только экологически чистую,<br> 
-		сертифицированную биохимию</h1>
-		<p>Во время работы мы используем исключительно  антибактериальную, гипоаллергенную биохимию <br>
-		профессионального назначения для химчистки мебели и ковров, согласно ГОСТ Р 51108-97.</p>
-		<p>Так что Вы можете быть полностью уверены, что после химчистки Ваша мебель и ковровые покрытия <br> 
-		будут не только идеально чистыми, но еще и абсолютно безопасным <br>
-		для здоровья Вас, Ваших детей и домашних животных.</p>
+		<div class="wrapper">
+			<h1>Мы используем только экологически чистую,<br> 
+			сертифицированную биохимию</h1>
+			<div>
+				<p>Во время работы мы используем исключительно  <br>
+				антибактериальную, гипоаллергенную биохимию <br>
+				профессионального назначения для химчистки мебели <br>
+				и ковров, согласно ГОСТ Р 51108-97.</p>
+				<p>Так что Вы можете быть полностью уверены, что после<br>
+				химчистки Ваша мебель и ковровые покрытия будут не <br>
+				только идеально чистыми, но еще и абсолютно безопасным <br>
+				для здоровья Вас, Ваших детей и домашних животных.</p>
+			</div>
+		</div>
 	</div>
+	
 
 	<div class="block-7">
 		<div class="wrapper">
