--- a/Numismatists/index.html
+++ b/Numismatists/index.html
@@ -11,21 +11,105 @@
 </head>
 <body>
 	<header>
-		<div class="wrapper">
-			<nav>
+		<nav>
+			<div class="wrapper">
 				<ul>
 					<li><a href="#">Главная</a></li>
 					<li><a href="#">Как покупать</a></li>
 					<li><a href="#">Гарантии</a></li>
 					<li><a href="#">Контакты</a></li>
 					<li><a href="#">О компании</a></li>
-				</ul>
-			</nav>
-			<button class="button">Подать объявление</button>
+				</ul>		
+				<button class="button">Подать объявление</button>
+			</div>
+		</nav>
+		<div class="wrapper">
+			<div class="cover">
+				<div class="logo">
+					<a href="#">
+						<img src="img/logo.png" alt="">
+						<section>
+							<h1>Монеты+</h1>
+							<h2>Нумизматический клуб</h2>
+						</section>
+					</a>
+				</div>
+				<div class="last">
+					<p class="title">Последние объявления</p>
+					<ul>
+
+						<li>
+							<a href="#">
+								<div>
+									<img src="img-1.jpg" alt="">
+								</div>
+								<p>Флорин Эдварда III</p>
+							</a>
+						</li>
+
+						<li>
+							<a href="#">
+								<div>
+									<img src="img-2.jpg" alt="">
+								</div>
+								<p>Двойной орел</p>
+							</a>
+						</li>
+
+						<li>
+							<a href="#">
+								<div>
+									<img src="img-3.jpg" alt="">
+								</div>
+								<p>Юбилейный доллар</p>
+							</a>
+						</li>
+
+						<li>
+							<a href="#">
+								<div>
+									<img src="img-1.jpg" alt="">
+								</div>
+								<p>Флорин Эдварда III</p>
+							</a>
+						</li>
+
+						<li>
+							<a href="#">
+								<div>
+									<img src="img-2.jpg" alt="">
+								</div>
+								<p>Двойной орел</p>
+							</a>
+						</li>
+
+						<li>
+							<a href="#">
+								<div>
+									<img src="img-3.jpg" alt="">
+								</div>
+								<p>Юбилейный доллар</p>
+							</a>
+						</li>
+
+						<li>
+							<a href="#">
+								<div>
+									<img src="img-1.jpg" alt="">
+								</div>
+								<p>Флорин Эдварда III</p>
+							</a>
+						</li>
+
+					</ul>
+					<div class="prev"></div>
+					<div class="next"></div>
+				</div>
+			</div>
 		</div>
 	</header>
-	<footer>
-		<div class="wrapper">
+	<div class="wrapper">
+		<footer>
 			<nav>
 				<ul>
 					<li><a href="#">Главная</a></li>
@@ -44,12 +128,11 @@
 					<li><a href="#"></a></li>
 				</ul>
 			</div>
-			
 			<p class="copy">
 				&copy Монеты+, Все права защищены
 			</p>
-		</div>
-	</footer>
+		</footer>
+	</div>
 	<div class="shadow">
 		<form action="send.php" method="post">
 			<input type="text" name="name" placeholder="Введите имя">
