article play with my pussy

--- a/Numismatists/index.html
+++ b/Numismatists/index.html
@@ -5,7 +5,7 @@
 	<title>Num</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="img/favicon.ico">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	<script src="js/script.js"></script>
 </head>
@@ -109,6 +109,186 @@
 		</div>
 	</header>
 	<div class="wrapper">
+		<div class="content">
+			<aside>
+				<p class="title">Категории</p>
+				<menu>
+					<ul>
+						<li>
+							<div class="checkbox">
+								<checkbox></checkbox>
+							</div>
+							<span>70 лет Победы</span>
+						</li>
+						<li>
+							<div class="checkbox">
+								
+							</div>
+							<span>ГВС</span>
+						</li>
+						<li>
+							<div class="checkbox">
+								<checkbox></checkbox>
+							</div>
+							<span>Древние города России</span>
+						</li>
+						<li>
+							<div class="checkbox">
+								<checkbox></checkbox>
+							</div>
+							<span>Жетоны, копии и прочее</span>
+						</li>
+						<li>
+							<div class="checkbox">
+								<checkbox></checkbox>
+							</div>
+							<span>Олимпиада в Сочи 2014 г.</span>
+						</li>
+						<li>
+							<div class="checkbox">
+								<checkbox></checkbox>
+							</div>
+							<span>Первая мировая война</span>
+						</li>
+						<li>
+							<div class="checkbox">
+								<checkbox></checkbox>
+							</div>
+							<span>Российская федерация</span>
+						</li>
+						<li>
+							<div class="checkbox">
+								<checkbox></checkbox>
+							</div>
+							<span>Россия 1997 - н.в. - разное</span>
+						</li>
+						<li>
+							<div class="checkbox">
+								<checkbox></checkbox>
+							</div>
+							<span>США</span>
+						</li>
+						<li>
+							<div class="checkbox">
+								<checkbox></checkbox>
+							</div>
+							<span>Юбилейные</span>
+						</li>
+						<li>
+							<div class="checkbox">
+								<checkbox></checkbox>
+							</div>
+							<span>Страны СНГ</span>
+						</li>
+						<li>
+							<div class="checkbox">
+								<checkbox></checkbox>
+							</div>
+							<span>Монеты СССР</span>
+						</li>
+						<li>
+							<div class="checkbox">
+								<checkbox></checkbox>
+							</div>
+							<span>Все категории</span>
+						</li>
+					</ul>
+				</menu>
+			</aside>
+			<section>
+				<div class="panel">
+					<div class="search">
+						<input type="text">
+						<input type="text">
+						<input type="text">
+					</div>
+					<div class="filter">
+						<input type="text">
+						<span>Товаров на странице</span>
+						<input type="text">
+					</div>
+				</div>
+				<article>
+					<div class="img"><img src="img-4.jpg" alt=""></div>
+					<section>
+						<p>1 рубль 1705 года («Польский талер»)</p>
+						<p>137 932 <span>Р</span></p>
+						<div class="star">
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+						</div>
+					</section>
+				</article>
+				<article>
+					<div class="img"><img src="img-5.jpg" alt=""></div>
+					<section>
+						<p>Копейка 1726 года (квадратная)</p>
+						<p>24 254 <span>Р</span></p>
+						<div class="star">
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+						</div>
+					</section>
+				</article>
+				<article>
+					<div class="img"><img src="img-4.jpg" alt=""></div>
+					<section>
+						<p>1 рубль 1705 года («Польский талер»)</p>
+						<p>137 932 <span>Р</span></p>
+						<div class="star">
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+						</div>
+					</section>
+				</article>
+				<article>
+					<div class="img"><img src="img-5.jpg" alt=""></div>
+					<section>
+						<p>Копейка 1726 года (квадратная)</p>
+						<p>24 254 <span>Р</span></p>
+						<div class="star">
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+						</div>
+					</section>
+				</article>
+				<article>
+					<div class="img"><img src="img-4.jpg" alt=""></div>
+					<section>
+						<p>1 рубль 1705 года («Польский талер»)</p>
+						<p>137 932 <span>Р</span></p>
+						<div class="star">
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+						</div>
+					</section>
+				</article>
+				<article>
+					<div class="img"><img src="img-5.jpg" alt=""></div>
+					<section>
+						<p>Копейка 1726 года (квадратная)</p>
+						<p>24 254 <span>Р</span></p>
+						<div class="star"></div>
+					</section>
+				</article>
+				<article>
+			</section>
+		</div>
 		<footer>
 			<nav>
 				<ul>
