change index and css

--- a/numismatists/index.html
+++ b/numismatists/index.html
@@ -1,325 +1,274 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+
+<html lang="ru">
 <head>
-	<meta charset="UTF-8">
-	<title>Num</title>
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="shortcut icon" href="img/favicon.ico">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
-	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-	<script src="js/script.js"></script>
+  <meta charset="UTF-8">
+
+  <title>Главная</title>
+  <link href="css/style.css" rel="stylesheet">
+  <link href="img/favicon.ico" rel="shortcut icon">
+  <link href=
+  'http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300&subset=latin,cyrillic-ext'
+  rel='stylesheet' type='text/css'>
+  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <script src="js/script.js"></script>
 </head>
+
 <body>
-	<header>
-		<nav>
-			<div class="wrapper">
-				<ul>
-					<li><a href="#">Главная</a></li>
-					<li><a href="#">Как покупать</a></li>
-					<li><a href="#">Гарантии</a></li>
-					<li><a href="#">Контакты</a></li>
-					<li><a href="#">О компании</a></li>
-				</ul>		
-				<button class="button">Подать объявление</button>
-			</div>
-		</nav>
-		<div class="wrapper">
-			<div class="cover">
-				<div class="logo">
-					<a href="#">
-						<img src="img/logo.png" alt="">
-						<section>
-							<h1>Монеты+</h1>
-							<h2>Нумизматический клуб</h2>
-						</section>
-					</a>
-				</div>
-				<div class="last">
-					<p class="title">Последние объявления</p>
-					<ul>
+  <header>
+    <nav>
+      <div class="wrapper">
+        <ul>
+          <li>
+            <a href="#">Главная</a>
+          </li>
 
-						<li>
-							<a href="#">
-								<div>
-									<img src="img-1.jpg" alt="">
-								</div>
-								<p>Флорин Эдварда III</p>
-							</a>
-						</li>
+          <li>
+            <a href="#">Как покупать</a>
+          </li>
 
-						<li>
-							<a href="#">
-								<div>
-									<img src="img-2.jpg" alt="">
-								</div>
-								<p>Двойной орел</p>
-							</a>
-						</li>
+          <li>
+            <a href="#">Гарантии</a>
+          </li>
 
-						<li>
-							<a href="#">
-								<div>
-									<img src="img-3.jpg" alt="">
-								</div>
-								<p>Юбилейный доллар</p>
-							</a>
-						</li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
 
-						<li>
-							<a href="#">
-								<div>
-									<img src="img-1.jpg" alt="">
-								</div>
-								<p>Флорин Эдварда III</p>
-							</a>
-						</li>
+          <li>
+            <a href="#">О компании</a>
+          </li>
+        </ul><button class="button">Подать объявление</button>
+      </div>
+    </nav>
 
-						<li>
-							<a href="#">
-								<div>
-									<img src="img-2.jpg" alt="">
-								</div>
-								<p>Двойной орел</p>
-							</a>
-						</li>
+    <div class="wrapper">
+      <div class="cover">
+        <div class="logo">
+          <a href="#"><img alt="" src="img/logo.png">
 
-						<li>
-							<a href="#">
-								<div>
-									<img src="img-3.jpg" alt="">
-								</div>
-								<p>Юбилейный доллар</p>
-							</a>
-						</li>
+          <hgroup>
+            <h1>Монеты+</h1>
 
-						<li>
-							<a href="#">
-								<div>
-									<img src="img-1.jpg" alt="">
-								</div>
-								<p>Флорин Эдварда III</p>
-							</a>
-						</li>
+            <h2>Нумизматический клуб</h2>
+          </hgroup></a>
+        </div>
 
-					</ul>
-					<div class="prev"></div>
-					<div class="next"></div>
-				</div>
-			</div>
-		</div>
-	</header>
-	<div class="wrapper">
-		<div class="content">
-			<aside>
-				<p class="title">Категории</p>
-				<menu>
-					<ul>
-						<li>
-							<div class="checkbox">
-								<checkbox></checkbox>
-							</div>
-							<span>70 лет Победы</span>
-						</li>
-						<li>
-							<div class="checkbox">
-								
-							</div>
-							<span>ГВС</span>
-						</li>
-						<li>
-							<div class="checkbox">
-								<checkbox></checkbox>
-							</div>
-							<span>Древние города России</span>
-						</li>
-						<li>
-							<div class="checkbox">
-								<checkbox></checkbox>
-							</div>
-							<span>Жетоны, копии и прочее</span>
-						</li>
-						<li>
-							<div class="checkbox">
-								<checkbox></checkbox>
-							</div>
-							<span>Олимпиада в Сочи 2014 г.</span>
-						</li>
-						<li>
-							<div class="checkbox">
-								<checkbox></checkbox>
-							</div>
-							<span>Первая мировая война</span>
-						</li>
-						<li>
-							<div class="checkbox">
-								<checkbox></checkbox>
-							</div>
-							<span>Российская федерация</span>
-						</li>
-						<li>
-							<div class="checkbox">
-								<checkbox></checkbox>
-							</div>
-							<span>Россия 1997 - н.в. - разное</span>
-						</li>
-						<li>
-							<div class="checkbox">
-								<checkbox></checkbox>
-							</div>
-							<span>США</span>
-						</li>
-						<li>
-							<div class="checkbox">
-								<checkbox></checkbox>
-							</div>
-							<span>Юбилейные</span>
-						</li>
-						<li>
-							<div class="checkbox">
-								<checkbox></checkbox>
-							</div>
-							<span>Страны СНГ</span>
-						</li>
-						<li>
-							<div class="checkbox">
-								<checkbox></checkbox>
-							</div>
-							<span>Монеты СССР</span>
-						</li>
-						<li>
-							<div class="checkbox">
-								<checkbox></checkbox>
-							</div>
-							<span>Все категории</span>
-						</li>
-					</ul>
-				</menu>
-			</aside>
-			<section>
-				<div class="panel">
-					<div class="search">
-						<input type="text">
-						<input type="text">
-						<input type="text">
-					</div>
-					<div class="filter">
-						<input type="text">
-						<span>Товаров на странице</span>
-						<input type="text">
-					</div>
-				</div>
-				<article>
-					<div class="img"><img src="img-4.jpg" alt=""></div>
-					<section>
-						<p>1 рубль 1705 года («Польский талер»)</p>
-						<p>137 932 <span>Р</span></p>
-						<div class="star">
-							<span></span>
-							<span></span>
-							<span></span>
-							<span></span>
-							<span></span>
-						</div>
-					</section>
-				</article>
-				<article>
-					<div class="img"><img src="img-5.jpg" alt=""></div>
-					<section>
-						<p>Копейка 1726 года (квадратная)</p>
-						<p>24 254 <span>Р</span></p>
-						<div class="star">
-							<span></span>
-							<span></span>
-							<span></span>
-							<span></span>
-							<span></span>
-						</div>
-					</section>
-				</article>
-				<article>
-					<div class="img"><img src="img-4.jpg" alt=""></div>
-					<section>
-						<p>1 рубль 1705 года («Польский талер»)</p>
-						<p>137 932 <span>Р</span></p>
-						<div class="star">
-							<span></span>
-							<span></span>
-							<span></span>
-							<span></span>
-							<span></span>
-						</div>
-					</section>
-				</article>
-				<article>
-					<div class="img"><img src="img-5.jpg" alt=""></div>
-					<section>
-						<p>Копейка 1726 года (квадратная)</p>
-						<p>24 254 <span>Р</span></p>
-						<div class="star">
-							<span></span>
-							<span></span>
-							<span></span>
-							<span></span>
-							<span></span>
-						</div>
-					</section>
-				</article>
-				<article>
-					<div class="img"><img src="img-4.jpg" alt=""></div>
-					<section>
-						<p>1 рубль 1705 года («Польский талер»)</p>
-						<p>137 932 <span>Р</span></p>
-						<div class="star">
-							<span></span>
-							<span></span>
-							<span></span>
-							<span></span>
-							<span></span>
-						</div>
-					</section>
-				</article>
-				<article>
-					<div class="img"><img src="img-5.jpg" alt=""></div>
-					<section>
-						<p>Копейка 1726 года (квадратная)</p>
-						<p>24 254 <span>Р</span></p>
-						<div class="star"></div>
-					</section>
-				</article>
-				<article>
-			</section>
-		</div>
-		<footer>
-			<nav>
-				<ul>
-					<li><a href="#">Главная</a></li>
-					<li><a href="#">Как покупать</a></li>
-					<li><a href="#">Гарантии</a></li>
-					<li><a href="#">Контакты</a></li>
-					<li><a href="#">О компании</a></li>
-					<li><a href="#">Пользовательское соглашение</a></li>
-				</ul>
-			</nav>
-			<div class="soc">
-				<ul>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-					<li><a href="#"></a></li>
-				</ul>
-			</div>
-			<p class="copy">
-				&copy Монеты+, Все права защищены
-			</p>
-		</footer>
-	</div>
-	<div class="shadow">
-		<form action="send.php" method="post">
-			<input type="text" name="name" placeholder="Введите имя">
-			<input type="text" name="phone" placeholder="Введите номер">
-			<input type="submit" value="Заказать">
-			<div class="cancel"></div>
-		</form>
-	</div>
+        <div class="last">
+          <p class="title">Последние объявления</p>
+
+          <ul>
+            <li>
+              <a href="item.html">
+              <div><img alt="" src="img-1.jpg"></div>
+
+              <p>Флорин Эдварда III</p></a>
+            </li>
+
+            <li>
+              <a href="item.html">
+              <div><img alt="" src="img-2.jpg"></div>
+
+              <p>Двойной орел</p></a>
+            </li>
+
+            <li>
+              <a href="item.html">
+              <div><img alt="" src="img-3.jpg"></div>
+
+              <p>Юбилейный доллар</p></a>
+            </li>
+
+            <li>
+              <a href="item.html">
+              <div><img alt="" src="img-1.jpg"></div>
+
+              <p>Флорин Эдварда III</p></a>
+            </li>
+
+            <li>
+              <a href="item.html">
+              <div><img alt="" src="img-2.jpg"></div>
+
+              <p>Двойной орел</p></a>
+            </li>
+
+            <li>
+              <a href="item.html">
+              <div><img alt="" src="img-3.jpg"></div>
+
+              <p>Юбилейный доллар</p></a>
+            </li>
+
+            <li>
+              <a href="item.html">
+              <div><img alt="" src="img-1.jpg"></div>
+
+              <p>Флорин Эдварда III</p></a>
+            </li>
+          </ul>
+
+          <div class="prev"></div>
+
+          <div class="next"></div>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <div class="wrapper">
+    <div class="content">
+      <aside>
+        <p class="title">Категории</p>
+
+        <div style="margin-left: 2em">
+          <ul>
+            <li>
+              <div class="checkbox"></div><span>70 лет Победы</span>
+            </li>
+
+            <li>
+              <div class="checkbox"></div><span>ГВС</span>
+            </li>
+
+            <li>
+              <div class="checkbox"></div><span>Древние города России</span>
+            </li>
+
+            <li>
+              <div class="checkbox"></div><span>Жетоны, копии и прочее</span>
+            </li>
+
+            <li>
+              <div class="checkbox"></div><span>Олимпиада в Сочи 2014 г.</span>
+            </li>
+
+            <li>
+              <div class="checkbox"></div><span>Первая мировая война</span>
+            </li>
+
+            <li>
+              <div class="checkbox"></div><span>Российская федерация</span>
+            </li>
+
+            <li>
+              <div class="checkbox"></div><span>Россия 1997 - н.в. -
+              разное</span>
+            </li>
+
+            <li>
+              <div class="checkbox"></div><span>США</span>
+            </li>
+
+            <li>
+              <div class="checkbox"></div><span>Юбилейные</span>
+            </li>
+
+            <li>
+              <div class="checkbox"></div><span>Страны СНГ</span>
+            </li>
+
+            <li>
+              <div class="checkbox"></div><span>Монеты СССР</span>
+            </li>
+
+            <li>
+              <div class="checkbox"></div><span>Все категории</span>
+            </li>
+          </ul>
+        </div>
+      </aside>
+
+      <section class="items">
+        <div class="panel">
+          <div class="search">
+            <input type="text"> <input type="text"> <input type="text">
+          </div>
+
+          <div class="filter">
+            <input type="text"> <span>Товаров на странице</span> <input type=
+            "text">
+          </div>
+        </div>
+
+        <article class="item">
+          <div class="img"><img alt="" src="img-6.jpg"></div>
+
+          <div class="info">
+            <a href="item.html" class="title">1 рубль 1705 года («Польский талер»)</a>
+
+            <p class="price">137 932 <span>Р</span></p>
+
+            <div class="stars">
+              <span></span> <span></span> <span></span> <span></span>
+              <span></span>
+            </div>
+          </div>
+        </article>
+      </section>
+    </div>
+
+    <footer>
+      <nav>
+        <ul>
+          <li>
+            <a href="#">Главная</a>
+          </li>
+
+          <li>
+            <a href="#">Как покупать</a>
+          </li>
+
+          <li>
+            <a href="#">Гарантии</a>
+          </li>
+
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+
+          <li>
+            <a href="#">О компании</a>
+          </li>
+
+          <li>
+            <a href="#">Пользовательское соглашение</a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="soc">
+        <ul>
+          <li>
+            <a href="#"></a>
+          </li>
+
+          <li>
+            <a href="#"></a>
+          </li>
+
+          <li>
+            <a href="#"></a>
+          </li>
+
+          <li>
+            <a href="#"></a>
+          </li>
+        </ul>
+      </div>
+
+      <p class="copy">&copy; Монеты+, Все права защищены</p>
+    </footer>
+  </div>
+
+  <div class="shadow">
+    <form action="send.php" method="post">
+      <input name="name" placeholder="Введите имя" type="text"> <input name=
+      "phone" placeholder="Введите номер" type="text"> <input type="submit"
+      value="Заказать">
+
+      <div class="cancel"></div>
+    </form>
+  </div>
 </body>
 </html>
